<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="string_header">Header</string>
    <string name="back">Back</string>
    <string name="img_back">img_back</string>
    <string name="age">13+</string>
    <string name="caption">Avengers:\nEnd Game</string>
    <string name="caption_one_line">Avengers: End Game</string>
    <string name="ganre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor_name">Robert Downey Jr.</string>
    <string name="actor_name1">Chris Evans</string>
    <string name="actor_name2">Mark Ruffalo</string>
    <string name="actor_name3">Chris Hemsworth</string>
    <string name="aim">aim</string>
    <string name="movies_list">Movies list</string>
    <string name="preview_img_1">prew_img_1</string>
    <string name="preview_text_ganre">Action, Adventure, Drama</string>
    <string name="duration">137 MIN</string>
    <string name="age_plus">13+</string>
</resources>