<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_header"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orig"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_drawable"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"></LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/img_back"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.5"
        android:fontFamily="@font/roboto"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="226dp"
        android:fontFamily="@font/roboto"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.85"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/caption"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ganre"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption" />

    <ImageView
        android:id="@+id/iv_star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:srcCompat="@drawable/ic_baseline_star_red_14" />

    <ImageView
        android:id="@+id/iv_star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_star1"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:srcCompat="@drawable/ic_baseline_star_red_14" />

    <ImageView
        android:id="@+id/iv_star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_star2"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:srcCompat="@drawable/ic_baseline_star_red_14" />

    <ImageView
        android:id="@+id/iv_star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_star3"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:srcCompat="@drawable/ic_baseline_star_red_14" />

    <ImageView
        android:id="@+id/iv_star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_star4"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/reviews"
        android:textColor="@color/grey"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_star5"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.85"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/storyline"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.75"
        android:fontFamily="@font/roboto"
        android:text="@string/content"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.85"
        android:text="@string/cast"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <ImageView
        android:id="@+id/iv_actor_foto3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_actor_foto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_actor_foto2"
        app:layout_constraintTop_toTopOf="@+id/iv_actor_foto2"
        app:srcCompat="@drawable/movie_" />

    <ImageView
        android:id="@+id/iv_actor_foto1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toBottomOf="@+id/iv_actor_foto"
        app:layout_constraintEnd_toStartOf="@+id/iv_actor_foto2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_actor_foto"
        app:layout_constraintTop_toTopOf="@+id/iv_actor_foto"
        app:srcCompat="@drawable/movie_2" />

    <ImageView
        android:id="@+id/iv_actor_foto2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_actor_foto1"
        app:layout_constraintEnd_toStartOf="@+id/iv_actor_foto3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_actor_foto1"
        app:layout_constraintTop_toTopOf="@+id/iv_actor_foto1"
        app:srcCompat="@drawable/movie_1" />

    <ImageView
        android:id="@+id/iv_actor_foto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/iv_actor_foto1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        app:srcCompat="@drawable/movie_3" />

    <TextView
        android:id="@+id/tv_actor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="109dp"
        android:fontFamily="@font/roboto"
        android:text="@string/actor_name"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_actor_foto"
        app:layout_constraintStart_toStartOf="@+id/iv_actor_foto"
        app:layout_constraintTop_toBottomOf="@+id/iv_actor_foto" />

    <TextView
        android:id="@+id/tv_actor_name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/actor_name1"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_actor_foto1"
        app:layout_constraintStart_toStartOf="@+id/iv_actor_foto1"
        app:layout_constraintTop_toBottomOf="@+id/iv_actor_foto1" />

    <TextView
        android:id="@+id/tv_actor_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/actor_name2"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_actor_foto2"
        app:layout_constraintStart_toStartOf="@+id/iv_actor_foto2"
        app:layout_constraintTop_toBottomOf="@+id/iv_actor_foto2" />

    <TextView
        android:id="@+id/tv_actor_name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/actor_name3"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_actor_foto3"
        app:layout_constraintStart_toStartOf="@+id/iv_actor_foto3"
        app:layout_constraintTop_toBottomOf="@+id/iv_actor_foto3" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
